# uap-corpus

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  dashboard.py  pyproject.toml  requirements.txt  uap-corpus.code-workspace
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/raw/: PROVENANCE.md
scripts/: 00_scrape.py  01_acquire.py  02_clean.py  02a_geocode.py  03_embed.py  04_temporal_vocab.py  05_same_night.py  06_archetypes.py  07_flaps.py  08_signatures.py  09_validate.py  10_pursue_cross.py  common.py
site/: _headers  index.html  landing.html
site/src/: Archetypes.jsx  Geography.jsx  Narratives.jsx  Overview.jsx  SameNight.jsx  Synthesis.jsx  TileMap.jsx  Timeline.jsx  USMap.jsx  Validation.jsx  Vocabulary.jsx  app.jsx  data.js  landing-cards.jsx  landing-data.jsx  landing-hero.jsx  landing.jsx  shared.jsx  styles.css  tweaks-panel.jsx  us-states-topo.json
tests/: test_pipeline.py  test_scraper.py
worker/: index.js  wrangler.toml
writeup/: build_pdf.py  draft.md
