[project]
name = "uap-corpus"
version = "1.0.0"
description = "Corpus-linguistics analysis of 111,961 NUFORC UFO witness narratives"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Jeremy Haynes"}]

[project.urls]
Homepage = "https://onehundredyears.report"
Repository = "https://github.com/doctorbrownphd/uap-corpus"
Paper = "https://onehundredyears.report/paper.pdf"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short"
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]
